# Gerenciador-de-Hotel-POO

./: README.md
Hotel3/: CMakeLists.txt  EstrategiaConcreta.h  IEstrategiaDesconto.h  atendente.cpp  atendente.h  consultardialog.cpp  consultardialog.h  consultardialog.ui  gerenciadorreservas.cpp  gerenciadorreservas.h  listardialog.cpp  listardialog.h  listardialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  principaldialog.cpp  principaldialog.h  principaldialog.ui  quarto.cpp  quarto.h  reserva.cpp  reserva.h  reservardialog.cpp  reservardialog.h  reservardialog.ui
